# math-conceal.nvim

./: .gitignore  AGENTS.md  CONTEXT.md  Cargo.toml  LICENSE  Makefile  README.md  THIRD_PARTY_LICENSES.md  convert_query.py  extract_typst_highlights.py  math-conceal-service-scm-1.rockspec  math-conceal.nvim-scm-1.rockspec  shell.nix  template.rockspec
crates/conceal/: Cargo.toml  build.rs
crates/conceal/src/: lib.rs  lookup_conceal.rs  math_symbols.json  math_symbols_typst.json
doc/: adding_conceal_types.md  math-conceal.txt  tags  zh_cn.md
docs/: image-renderer-refactor.md
ftplugin/: bibtex.lua  tex.lua
highlights/: highlights.json  highlights.md
lua/: treesitter_query.lua
plugin/: latex-conceal.lua  math-conceal.lua  note-tree.nvim.lua
queries_symbols/: typst_symbols.scm
scripts/: extract_highlights.lua  extract_queris.lua  symbols_typst_custom.json  test-attach-api.lua  test-fold-grid-asset-resize-sync.lua  test-fold-grid-centered-prefix.lua  test-fold-grid-foldtext-repaint.lua  test-fold-grid-geometry-refresh.lua  test-fold-grid-reupload-after-close.lua  test-image-capability-health.lua  test-image-cursor-sync-coalescing.lua  test-image-cursor-sync-debounce.lua  test-image-hidden-service-idle.lua  test-image-preview-idle-service.lua  test-image-shared-service.lua  test-image-unload-resume.lua  test-math-block-layout-asset-resize.lua  test-placement-conflict.lua  test-placement-inline-boundary-strategies.lua  test-placement-isolated-block-strategy.lua  test-placement-surface.lua  test-placement-window-transaction.lua  test-realization-adapters.lua  (+20 more)
(+150 files in other folders)
